Do not use raw parameterized PropertyMapper (#26093)
Closes #26092

Signed-off-by: Martin Bartoš <mabartos@redhat.com>